examples/do_block_storage_stateful_set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-csi-app-set
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mypod
  serviceName: "block-storage-example"


  template:
    metadata:
      labels:
        app: mypod
    spec:
      containers:
        - name: block-storage-example
          image: busybox
          args:
            - sleep
            - infinity
          volumeMounts:
            - mountPath: "/data"
              name: csi-pvc
  volumeClaimTemplates:
    - metadata:
        name: csi-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: do-block-storage
