examples/ingress-hello-kubernetes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  labels:
    app: hello-kubernetes-first
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cluster-issuer-cert-manager-resources-qa
spec:
  tls:
    - hosts:
        - "eth2.sigdevops.io"
      secretName: hello-kubernetes-tls
  rules:
    - host: "eth2.sigdevops.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-kubernetes-first
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-first
  labels:
    app: hello-kubernetes-first
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-kubernetes-first
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-first
  labels:
    app: hello-kubernetes-first
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kubernetes-first
  template:
    metadata:
      labels:
        app: hello-kubernetes-first
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.8
          ports:
            - containerPort: 8080
